--- a/style.css
+++ b/style.css
@@ -52,10 +52,14 @@ header {
   color: white;
 }
 
-footer {
-  position: relative;
-  height: 100%;
-  padding: 2rem
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  text-align: center;
 }
 
 .container {
@@ -81,7 +85,6 @@ footer {
     margin-bottom: 1rem;
   }
   
-
   
   /* media query for mobile devices */
 @media only screen and (max-width: 600px) {
